# eaterss

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/eaterss/: __init__.py  app.py  cli.py
