[project]
name = "eaterss"
version = "0.1.0"
description = "A TUI RSS feed reader for your terminal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "textual>=6.11.0",
]

[project.scripts]
eaterss = "eaterss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eaterss"]
